Разделение монолита на микросервисы с удалением избыточного пока что функционала (KISS).